--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "postgres",
     "password": "230899",
-    "database": "hackathon",
+    "database": "sphera",
     "host": "127.0.0.1",
     "dialect": "postgres",
     "operatorsAliases": false
